# 20250401_BirdCLEF

./: .gitignore  how_to_build_docker_container.md  prompt.txt  pyproject.toml
working/exp1/: audio2mel.ipynb  modeling.ipynb  readme.md
