[project]
name = "bird-clef2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Soichiro",email = "ura.soo3635@google.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
